objects/ssot__VehicleAssetEnergyUse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AircraftFuelEconomyNumber__c</fullName>
        <label>Aircraft Fuel Economy</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__AircraftFuelEconomyUnit__c</fullName>
        <label>Aircraft Fuel Economy Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AircraftType__c</fullName>
        <label>Aircraft Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarbonFootprintReportDate__c</fullName>
        <label>Carbon Footprint Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CostCenter__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DistanceUnitId__c</fullName>
        <label>Distance Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Distance__c</fullName>
        <label>Distance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FlightDate__c</fullName>
        <label>Flight Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FlightDurationInHours__c</fullName>
        <label>Flight Duration (Hours)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelConsumptionNumber__c</fullName>
        <label>Fuel Consumption</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelConsumptionUnit__c</fullName>
        <label>Fuel Consumption Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FuelEfficiencyNumber__c</fullName>
        <label>Fuel Efficiency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FuelEfficiencyUnit__c</fullName>
        <label>Fuel Efficiency Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FuelType__c</fullName>
        <label>Fuel Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vehicle Asset Energy Use Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OtherEmssnFctrId__c</fullName>
        <label>Other Emissions Factors</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope1EmissionsNumber__c</fullName>
        <label>Supl Scope 1 Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope2LocationBasedEmssn__c</fullName>
        <label>Supl Scope 2 Location-Based Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope2MarketBasedEmssn__c</fullName>
        <label>Supl Scope 2 Market-Based Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3DnstrmEmissionsNumber__c</fullName>
        <label>Supl Scope 3 Downstream Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3UpstrmEmissionsNumber__c</fullName>
        <label>Supl Scope 3 Upstream Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SupplierId__c</fullName>
        <label>Supplier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleAssetCrbnFtprntId__c</fullName>
        <label>Vehicle Asset Carbon Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleAssetEmssnSrcId__c</fullName>
        <label>Vehicle Asset Emissions Source</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383875288_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleAssetEnergyUse_AccountId_map__rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>VehicleAssetEnergyUse_AccountId_map__rel</relationshipLabel>
        <relationshipName>rel_1747383875288_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383877070_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleAssetEnergyUse_OtherEmssnFctr_rel</label>
        <referenceTo>ssot__OtherEmissionsFactorSet__dlm</referenceTo>
        <relationshipLabel>VehicleAssetEnergyUse_OtherEmssnFctr_rel</relationshipLabel>
        <relationshipName>rel_1747383877070_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383878182_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleAssetEnergyUse_DistanceUnitId_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>VehicleAssetEnergyUse_DistanceUnitId_rel</relationshipLabel>
        <relationshipName>rel_1747383878182_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>